--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js | dat import --json"
+    "start": "node index.js | dat import --csv"
   },
   "repository": {
     "type": "git",
@@ -24,8 +24,6 @@
   },
   "homepage": "https://github.com/finnp/dat-uci-bike-sharing",
   "dependencies": {
-    "csv-parser": "^1.4.6",
-    "ldjson-stream": "^1.2.1",
     "request": "^2.40.0",
     "unzip": "^0.1.9"
   }
